--- a/partials/pci/detail.tpl.html
+++ b/partials/pci/detail.tpl.html
@@ -1,11 +1,19 @@
-<div class="data">
-    <p><strong>Name :</strong> {{event.name}}</p><br/>
-    <p><strong>Description :</strong> {{event.description}}</p><br/>
-    <p><strong>Icon image :</strong> {{event.description}}</p><br/>
-    <p><strong>Coins :</strong> {{event.coins}}</p><br/>
-    <p><strong>Platform : </strong> {{event.platform}}</p><br/>
-    <p><strong>Start Date :</strong> {{event.sDate}}</p>
-    <p><strong>End Date :</strong> {{event.eDate}}</p>
-    <hr/>
-    <a ui-sref="home.pci">Back to PCI Page</a>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <strong>App detail</strong>
+    </div>
+    <div class="panel-body">
+        <div class="data">
+            <p><strong>Name :</strong> {{app.name}}</p><br/>
+            <p><strong>Description :</strong> {{app.description}}</p><br/>
+            <p><strong>Icon image :</strong> {{app.icon}}</p><br/>
+            <p><strong>Coins :</strong> {{app.coins}}</p><br/>
+            <p><strong>Gems :</strong> {{app.gems}}</p><br/>
+            <p><strong>Platform : </strong> {{app.platform}}</p><br/>
+            <p><strong>Start Date :</strong> {{app.sDate}}</p>
+            <p><strong>End Date :</strong> {{app.eDate}}</p>
+            <hr/>
+            <a ui-sref="home.pci">Back to PCI Page</a>
+        </div>
+    </div>
 </div>
