--- a/partials/signin.html
+++ b/partials/signin.html
@@ -5,17 +5,24 @@
                 <strong>Signin</strong>
             </div>
             <div class="panel-body">
+
                 <form class="form-horizontal" role="form" ng-submit="signin()">
+                    <div class="form-group">
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-10">
+                            <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}}</alert>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="email" placeholder="Email" ng-model="email">
+                            <input type="text" ng-required="true" class="form-control" id="email" placeholder="Email" ng-model="username">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="password" class="col-sm-2 control-label">Password</label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="password" placeholder="Password" ng-model="password">
+                            <input type="password" ng-required="true" class="form-control" id="password" placeholder="Password" ng-model="password">
                         </div>
                     </div>
                     <div class="form-group">
